Replaced errors in alers to bootstrap dialog

--- a/Gistlyn/Gistlyn/css/offset.css
+++ b/Gistlyn/Gistlyn/css/offset.css
@@ -58,3 +58,21 @@
     .text-lg-center { text-align: center; }
     .text-lg-justify { text-align: justify; }
 }
+
+/* vertivcally center modal dialog */
+.modal {
+  text-align: center;
+}
+
+.modal:before {
+  display: inline-block;
+  vertical-align: middle;
+  content: " ";
+  height: 100%;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
