--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -1,2 +1,100 @@
-﻿body {
+﻿/* reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* css */
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+html,body,#body {
+  height:100%;
+  margin:0;
+}
+
+#body {
+    display: flex;
+    flex-flow: column;
+}
+
+.titlebar {
+    background: #0371BE;
+    color: #fff;
+    height: 32px;
+    padding: 5px;
+}
+.titlebar .container {
+    display: flex;
+}
+.titlebar img {
+    height: 26px;
+}
+.titlebar h3 {
+    line-height: 32px;
+    padding: 0 0 0 5px;
+    font-size: 22px;
+}
+
+#content {
+    background: #fff;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+#footer {
+    background: #0371BE;
+    /*background: #01215A;*/
+    min-height: 40px;
+}
+
+
+#app {
+    display: flex;
+    background: #008080;
+    height: 100%;
+}
+
+.editor {
+    flex: 1;
+    background: url(../img/editor-bg.png);
+    overflow: auto;
+    color: #000;
+}
+.preview {
+    flex: 1;
+    background: #F7F7F7;
+    border-left: 1px solid #ddd;
+    overflow: auto;
 }
