--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -38,7 +38,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-html,body,#body {
+html,body,#app,#body {
   height:100%;
   margin:0;
 }
@@ -65,6 +65,36 @@ html,body,#body {
     padding: 0 0 0 5px;
     font-size: 22px;
 }
+#gist {
+    width:100%;
+    text-align: center;
+    margin: 0 0 0 -145px;
+    padding: 0 0 0 0;
+}
+#txtGist {
+    width: 350px;
+    padding: 4px 8px;
+    border: none;
+    font-size: 14px;
+    line-height: 20px;
+    color: #f7f7f7;
+    background: #0488E4
+}
+#txtGist::-webkit-input-placeholder {
+    color: #f7f7f7 !important;
+}
+#txtGist::-moz-placeholder {  /* Firefox 19+ */
+    color: #f7f7f7 !important;  
+}
+ #txtGist:-ms-input-placeholder {  
+    color: #f7f7f7 !important;  
+}
+::selection {
+    background: #0371BE; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+    background: #0371BE; /* Gecko Browsers */
+}
 
 #content {
     background: #fff;
@@ -80,15 +110,16 @@ html,body,#body {
 }
 
 
-#app {
+#ide {
     display: flex;
     background: #008080;
     height: 100%;
 }
 
 .editor {
+    display: flex;
+    flex-flow: column;
     flex: 1;
-    background: url(../img/editor-bg.png);
     overflow: auto;
     color: #000;
 }
@@ -97,4 +128,26 @@ html,body,#body {
     background: #F7F7F7;
     border-left: 1px solid #ddd;
     overflow: auto;
+}
+
+#tabs {
+    display: flex;
+    flex-flow: row;
+    background: #01215A;
+    padding: 8px 0 0 30px;
+    min-height: 22px;
+}
+#tabs div {
+    padding: 5px 8px;
+    margin: 0 4px 0 0;
+    background: #0371BE;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+}
+#tabs div.active {
+    background: #fff;
+    color: #444;
+    margin-bottom: -1px;
+    cursor: auto;
 }
