--- a/src/Gistlyn/css/codemirror.css
+++ b/src/Gistlyn/css/codemirror.css
@@ -1,10 +1,15 @@
-﻿.CodeMirror {
+﻿.ReactCodeMirror {
+    flex: 1;
+}
+
+.CodeMirror {
     margin: 0;
     padding: 0;
     font-family: monospace;
     font-size: 10pt;
     line-height: 1.4;
     color: black;
+    height: 100%;
 }
 
 .cm-s-default span.cm-punctuation { color: green; }
