--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -163,6 +163,22 @@ html,body,#app,#body {
     cursor: auto;
 }
 
+#actions {
+    display: flex;
+    padding: 10px;
+    color: #f7f7f7;
+}
+#actions div {
+    display: flex;
+    cursor: pointer;
+}
+#actions div:hover {
+    color: #ffc;
+}
+#actions p {
+    padding: 4px 0 0 5px;
+}
+
 #run {
     position: absolute;
     left: 50%;
@@ -212,26 +228,45 @@ html,body,#app,#body {
     flex-flow: column;
 }
 
-#status, #vars, #errors {
+#status, #vars, #errors, #placeholder {
     flex: 2;
 }
 #console {
     flex: 1;
 }
-#vars thead tr {
+#vars thead, #vars thead tr {
     background: #01215A;
 }
 #vars th {
     text-align: left;
     color: #fff;
     padding: 4px 12px;
-    line-height: 14px;
-    border-right: solid 1px #ddd;
-    border-top: solid 5px #01215A;
-    border-bottom: solid 5px #01215A;
+    line-height: 24px;
 }
 #vars td {
     padding: 4px 12px;
+    font-size: 14px;
+}
+#vars .octicon {
+    cursor: pointer;
+}
+#vars a {
+    cursor: pointer;
+}
+#vars a:hover {
+    text-decoration: underline;
+}
+#evaluate input {
+    padding: 4px 8px;
+    width: 80%;
+    margin: 10px 0 0 10px;
+    font-size: 16px;
+    border: solid 1px #A9A9A9;
+}
+#evaluate i {
+    position: absolute;
+    margin: 5px 0 0 -5px;
+    font-size: 38px;
 }
 
 /* Custom */
