--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -56,8 +56,9 @@ body {
 }
 
 html,body,#app,#body {
-  height:100%;
-  margin:0;
+    height:100%;
+    margin:0;
+    overflow: hidden;
 }
 
 #body {
