--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -235,6 +235,18 @@ html,body,#app,#body {
 #console {
     flex: 1;
 }
+#console .clear-btn {
+    position: absolute;
+    right: 4px;
+    margin: 4px;
+    font-size: 18px;
+    color: #aaa;
+    cursor: pointer;
+}
+#console .clear-btn:hover {
+    color: #444;
+}
+
 #vars thead, #vars thead tr {
     background: #01215A;
 }
@@ -268,15 +280,21 @@ html,body,#app,#body {
     position: absolute;
     margin: 5px 0 0 -5px;
     font-size: 38px;
+    cursor: pointer;
+}
+#evaluate i:hover {
+    color: #0371BE;
 }
 
 /* Custom */
 
 ::selection {
     background: #0371BE; /* WebKit/Blink Browsers */
+    color: #f7f7f7;
 }
 ::-moz-selection {
     background: #0371BE; /* Gecko Browsers */
+    color: #f7f7f7;
 }
 ::-webkit-scrollbar {
     width: 5px;
@@ -300,3 +318,36 @@ html,body,#app,#body {
   user-select: none;           /* non-prefixed version, currently
                                   not supported by any browser */
 }
+
+/*jsonviewer*/
+#expression-result {
+    padding: 12px 14px;
+}
+#expression-result table {
+    width: auto;
+}
+
+#expression-result, #expression-result TH {
+    color: #444;
+    font-size: 14px;
+} 
+#expression-result THEAD, #expression-result THEAD TR {
+    background: #f1f1f1;    
+    border-bottom: solid 1px #ddd;
+}
+
+.jsonviewer .ib { display: inline-block; }
+.jsonviewer TABLE { border-collapse:collapse; border: solid 1px #ccc; clear: left; }
+.jsonviewer TH { text-align: left; padding: 4px 8px; text-shadow: #fff 1px 1px -1px; background: #f1f1f1; white-space:nowrap; font-weight: bold; }
+.jsonviewer TD { padding: 8px 8px 0 8px; vertical-align: top; }
+.jsonviewer DL { margin: 0; clear: left; }
+.jsonviewer DT { font-weight: bold; width: 160px; clear: left; float: left; display:block; white-space:nowrap; line-height: 26px; }
+.jsonviewer DD { display: block; float: left; line-height: 26px; max-width: 600px; }
+.jsonviewer DL DL DT { font-weight: bold; }
+.jsonviewer HR { display:none; }
+.jsonviewer TD DL HR { display:block; padding: 0; clear: left; border: none; }
+.jsonviewer TD DL { padding: 4px; margin: 0; height:100%; max-width: 700px; }
+.jsonviewer DL TD DL DT { padding: 2px; margin: 0 10px 0 0; font-weight: bold; width: 120px; overflow: hidden; clear: left; float: left; display:block; }
+.jsonviewer DL TD DL DD { margin: 0; padding: 2px; display: block; float: left; }
+.jsonviewer TBODY>TR:last-child>TD { padding: 8px; }
+.jsonviewer H3 { margin: 0 0 10px 0; }
