--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -196,12 +196,20 @@ html,body,#app,#body {
 #actions div {
     display: flex;
     cursor: pointer;
+    margin: 0 30px 0 0;
 }
 #actions div:hover {
     color: #ffc;
 }
 #actions p {
     padding: 4px 0 0 5px;
+}
+
+#actions .disabled, #actions .disabled p,
+#actions .disabled span, #actions .disabled:hover span, 
+#actions .disabled i, #actions .disabled:hover i
+ {
+    color: #ccc;
 }
 
 #run {
