Add support for creating, renaming and deleting files

--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -230,6 +230,10 @@ html,body,#app,#body {
     margin-bottom: -1px;
     cursor: auto;
 }
+#tabs .txtFileName {
+    border: none;
+    padding: 0 2px;
+}
 
 #actions {
     display: flex;
