--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -146,11 +146,12 @@ html,body,#app,#body {
 
 #btnCollections {
     position: absolute;
+    top: 0;
     margin: 0px 0 0 45px;
-    padding: 0 5px;
+    padding: 5px;
     color: #6ab5e8;
     font-size: 30px;
-    height: 37px;
+    height: 40px;
     cursor: pointer;
 }
 #btnCollections:hover {
