--- a/src/Gistlyn/css/dialogs.css
+++ b/src/Gistlyn/css/dialogs.css
@@ -112,3 +112,45 @@
     -webkit-box-shadow: none;
     box-shadow: none;
 }
+
+#dialog.dark {
+    background: none;
+}
+#dialog.dark .dialog {
+    background: rgba(0,0,0,.85);
+    border-radius: 20px;
+}
+#dialog.dark .dialog-header {
+    background: none;
+    margin: 0 0 0 10px;
+    font-weight: bold;
+}
+#dialog.dark .dialog-body {
+    color: #fff;
+    min-width: 400px;
+    line-height: 20px;
+}
+#dialog.dark .dialog-body>table {
+    margin: 0 0 20px 10px;
+}
+#dialog.dark .dialog-body h4 {
+    padding: 15px 0 5px 0;
+    color: #dd0;
+    font-weight: bold;
+}
+#dialog.dark .dialog-body th {
+    text-align: right;
+}
+#dialog.dark .dialog-body th b {
+    font-family: "Courier New";
+    font-size: 13px;
+    color: #dd0;
+    font-weight: bold;
+}
+#dialog.dark .dialog-body th i {
+    font-family: arial;
+    font-style: normal;
+    font-weight: bold;
+    padding: 0 10px 0 3px;
+}
+
