Add Editor popup menu and new Add ServiceStack Reference dialog

--- a/src/Gistlyn/css/dialogs.css
+++ b/src/Gistlyn/css/dialogs.css
@@ -154,3 +154,11 @@
     padding: 0 10px 0 3px;
 }
 
+#dialog a, #dialog .lnk {
+    color: #428bca;
+    text-decoration: none;
+    cursor: pointer;
+}
+#dialog a:hover, #dialog .lnk:hover {
+    color: #2a6496;
+}
