--- a/src/Gistlyn.Resources/css/dialogs.css
+++ b/src/Gistlyn.Resources/css/dialogs.css
@@ -162,3 +162,8 @@
 #dialog a:hover, #dialog .lnk:hover {
     color: #2a6496;
 }
+
+#dialog.console-viewer.dark .dialog-body td {
+    font: 13px/18px monospace;
+    color: #00FF00;
+}
