--- a/src/Gistlyn.Resources/css/reset.css
+++ b/src/Gistlyn.Resources/css/reset.css
@@ -46,12 +46,14 @@ table {
 }
  
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
 }
  
 ::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+  background-color: #ccc;
+}
+
+.console-viewer ::-webkit-scrollbar-thumb {
+  background-color: #555;
 }
 
 .noselect {
