--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -13,14 +13,19 @@
   font-style: normal;
 }
 
+body, html { /*iPad*/
+    position: fixed; 
+    width: 100%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 html,body,#app,#body {
     height:100%;
     margin:0;
-    overflow: hidden;
 }
 
 #body {
@@ -123,7 +128,7 @@ html,body,#app,#body {
 #sig {
     position: absolute;
     left: 50%;
-    bottom: 11px;
+    bottom: 2px;
     font: 12px arial;
     color: #ddd;
     margin: 0 0 0 -65px;
@@ -189,6 +194,7 @@ html,body,#app,#body {
     position: absolute;
     left: 50%;
     top: 50%;
+    width: 64px;
     margin: -60px 0 0 -30px;
     cursor: pointer;
 }
@@ -227,10 +233,10 @@ html,body,#app,#body {
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
-#console pre.error {
+.console pre.error {
     color: red;
 }
-#console pre.success {
+.console pre.success {
     color: #3c763d;
 }
 
@@ -245,9 +251,22 @@ html,body,#app,#body {
     overflow: auto;
 }
 
+.ipad #console {
+    display: none;
+}
+
+#console {
+    height: 25%;
+    font: 14px/20px arial;
+    border-top: solid 1px #ddd;
+    border-bottom: solid 1px #ddd;
+    overflow: auto;
+    height: 25%;
+}
+
 #console .clear-btn {
     position: absolute;
-    right: 4px;
+    right: 1px;
     margin: 4px;
     font-size: 18px;
     color: #aaa;
@@ -280,7 +299,7 @@ html,body,#app,#body {
 #vars a:hover {
     text-decoration: underline;
 }
-#evaluate input {
+#txtEval {
     padding: 4px 8px;
     width: 80%;
     max-width: 500px;
@@ -288,19 +307,19 @@ html,body,#app,#body {
     font-size: 16px;
     border: solid 1px #A9A9A9;
 }
-#evaluate i {
+#btnEval {
     margin: 0 0 0 -3px;
     font-size: 30px;
     cursor: pointer;
     vertical-align: bottom;
 }
-#evaluate i:hover {
+#btnEval:hover {
     color: #0371BE;
 }
 
 /*jsonviewer*/
 #expression-result {
-    padding: 12px 0 12px 10px;
+    padding: 12px 0 12px 24px;
 }
 #expression-result table {
     width: auto;
