--- a/src/Gistlyn.Resources/css/dialogs.css
+++ b/src/Gistlyn.Resources/css/dialogs.css
@@ -167,3 +167,21 @@
     font: 13px/18px monospace;
     color: #00FF00;
 }
+#dialog.console-viewer .dialog-header span,
+#dialog.console-viewer .dialog-footer span {
+    float: right;
+    color: #dd0;
+    font-size: 16px;
+    cursor: pointer;
+    padding-left: 10px;
+    font-weight: normal;
+}
+
+#nosse-dialog a {
+    color: #428bca;
+    text-decoration: none;
+    padding: 0 6px;
+}
+#nosse-dialog a:hover {
+    color: #2a6496;
+}
