--- a/src/Gistlyn/css/collections.css
+++ b/src/Gistlyn/css/collections.css
@@ -63,6 +63,9 @@
 #livelist a:hover {
     text-decoration: underline;
 }
+.ipad #livelist {
+    display: none;
+}
 
 #markdown {
     line-height: 20px;
